# BinaryLib

./: .gitignore  CMakeLists.txt  README.md
src/: BinaryFileHandler.cpp  BinaryFileHandler.h  BinaryMember.h  CMakeLists.txt  CRCcalc.cpp  CRCcalc.h  DTSM.cpp  DTSM.h  Definitions.h  EndianConversion.cpp  EndianConversion.h  EnumDefinitions.h  IBinary.cpp  IBinary.h  IDefinitions.cpp  IDefinitions.h  Reflection.cpp  Reflection.h  absBinary.cpp  absBinary.h
src/constBin/: CMakeLists.txt  MacroMage.h  absConstBinary.cpp  absConstBinary.h
src/dynBin/: CMakeLists.txt  absDynamicBinary.cpp  absDynamicBinary.h
src/examples/: CMakeLists.txt  exampleClass.cpp  exampleClass.h
test/: CMakeLists.txt
test/BinLib/: CMakeLists.txt
test/BinLib/constBinLib/: CMakeLists.txt  constBin_test.cpp  test.rks  testout.rks
test/BinLib/dynBinLib/: CMakeLists.txt  dynBin_test.cpp
